# FireFiles

./: .gitignore  README.md  docker-compose.yml  script.sh
.github/workflows/: release.yml
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/dev/firefiles/bridge/: MainActivity.kt  UploadService.kt
android-app/app/src/main/res/drawable/: ic_firefiles.xml
linux-app/: package.json
linux-app/src/: index.html
linux-app/src-tauri/: Cargo.toml  tauri.conf.json
linux-app/src-tauri/capabilities/: default.json
linux-app/src-tauri/src/: main.rs
monitor/: Dockerfile  server.py
monitor-agents/: ubuntu-heartbeat.sh  windows-heartbeat.ps1
ubuntu/: setup-samba.sh  verify-inbox.sh
windows-app/: index.html  package-lock.json  package.json
windows-app/scripts/: build.js
windows-app/src/: main.js  style.css
windows-app/src-tauri/: Cargo.toml  tauri.conf.json
windows-app/src-tauri/capabilities/: default.json
windows-app/src-tauri/src/: main.rs
windows-worker/: Cargo.toml
windows-worker/src/: main.rs
